[fix] (client) correct img resizing on mobile with address bar

--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -68,8 +68,8 @@ footer li {
   background-image: url('../img/botswana-grey.min.jpeg');
   background-position: 60% 50%;
   background-size: cover;
-  max-width: 100%;
-  max-height: 100%;
+  max-width: 100wh;
+  max-height: 100vh;
   position: relative;
   height: 70vh
 }
